23 June 2021 Petasis George <petasis@iit.demokritos.gr>
 * clarin-angular/src/app/ng-matero/*: Added the ng-matero template.
 * clarin-angular: Pulled changes from SEMANTIKA, and resolved some conflicts.

16 June 2021 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/UserController.php:
 * backend/clarin/resources/views/emails/activate-account.blade.php:
 * backend/clarin/resources/views/emails/reset-password.blade.php:
 * backend/clarin/resources/views/emails/verify-collection.blade.php: Fixes
 during send of e-mails, so as the logo image is correctly loaded under both
 the AnrjularJS and the Angular UI.

31 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * clarin/app/Http/routes.php: Added some more routes (domain dependent) to
 support the UI in Angular.
 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/components/views/navbar/navbar.component.html:
 * clarin-angular/src/app/components/views/navbar/navbar.component.ts:
 * clarin-angular/src/app/components/views/welcome/welcome.component.html:
 * clarin-angular/src/app/components/views/welcome/welcome.component.ts:
 * clarin-angular/src/index.html: Minor changes for hosting both UIs
 (AngularJS & Angular) on the same server.
 
28 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * clarin-angular: A new folder, containing a migration from AngularJS to
 Angular. Migration has been done by SEMANTIKA (http://semantika.si/en-us/).

05 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/css/clarin.css: Added CSS styling for TEI elements.
 * backend/clarin/.env.example:
 * backend/clarin/app/Http/Controllers/DocumentController.php: Added execution
 of handlers (for the time being through a call to an external, django-based
 service).
   Backend (Laravel) upgraded to 8.x.

04 May 2021 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/DocumentController.php: