@@ -21,7 +21,7 @@ id="file"
     [flow]="flow.flowJs">
 </div-->
 
-
+<!-- Table moved to AddCollectionComponent
 <div id="uploadTable">
     <table class="table table-bordered" flow-transfers *ngIf="userFiles.length!=undefined && userFiles.length>0">
       <thead>
@@ -64,6 +64,7 @@ id="file"
       </tbody>
     </table>
   </div>
+-->
 
 
   <div class="drop-area" id="drag" flow-drop flow-drag-enter="class='alert-success'" flow-drag-leave="class=''" ng-class="class"
