@@ -9,12 +9,14 @@
         <mat-card-content class="sidebar-main-content">
           <ul>
             <li *ngFor="let collection of dataForTheTree">
-               <img src="assets/images/folder-closed.png" /> {{collection.name}} <span class="right">
-               <span *ngIf="collection.confirmed==1 && collection.is_owner" class="label label-info">{{'Collections.SharedByMe'|translate}}</span>
-               <span *ngIf="collection.confirmed==1 && !collection.is_owner" class="label label-info"
+              <img src="assets/images/folder-closed.png" /> {{collection.name}} <span class="right">
+                <span *ngIf="collection.confirmed==1 && collection.is_owner"
+                  class="label label-info">{{'Collections.SharedByMe'|translate}}</span>
+                <span *ngIf="collection.confirmed==1 && !collection.is_owner" class="label label-info"
                   title="The actions that can be performed on this collection are limited because it does not belong to you">{{'Collections.SharedWithMe'|translate}}</span>
-               ({{collection.document_count}} {{'Collections.Documents'|translate}})
-            </span></li>
+                ({{collection.document_count}} {{'Collections.Documents'|translate}})
+              </span>
+            </li>
           </ul>
         </mat-card-content>
       </mat-card>
@@ -59,16 +61,51 @@
             <div class="form-group">
               <label>{{'Collections.FilesToBeAddedToTheCollection' | translate}}</label>
               <div class="table-responsive">
+                <div id="uploadTable">
+                  <table class="table table-bordered" 
+                    *ngIf="userFiles.length!=undefined && userFiles.length>0">
+                    <thead>
+                      <tr>
+                        <th>#</th>
+                        <th>Filename</th>
+                        <th *ngIf="filterFiles !== false">Type</th>
+                        <th *ngIf="filterFiles !== false">Encoding</th>
+                        <th *ngIf="filterFiles !== false">Handler</th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let file of userFiles;let index=index">
+                        <td>{{index+1}}</td>
+                        <td>{{file.name}}</td>
+                        <td *ngIf="filterFiles !== false">
+                          <select id="type" class="form-control" [(ngModel)]="file.type" [ngModelOptions]="{standalone: true}">
+                            <option *ngFor="let o of typeOptions" [value]="o">{{o}}</option>
+                          </select>
+                        </td>
+                        <td *ngIf="filterFiles !== false">
+                          <select id="defaultEndoding" class="form-control" [(ngModel)]="file.encoding" [ngModelOptions]="{standalone: true}">
+                            <option *ngFor="let o of encodingOptions" [value]="o">{{o}}</option>
+                          </select>
+                        </td>
+                        <td *ngIf="filterFiles !== false">
+                          <select id="handler" class="form-control" [(ngModel)]="file.handler" [ngModelOptions]="{standalone: true}">
+                            <option *ngFor="let o of handlerOptions" [ngValue]="o">{{o.name}}</option>
+                          </select>
+                        </td>
+                        <td class="col-lg-1"><a class="btn btn-danger btn-xs" (click)="userFiles.splice(index, 1)">Remove</a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+
                 <!--uploader flow-init></uploader><hr-->
-                <uploader [allowedTypes]="allowedTypes"
-                          [fileTypeOptions]="typeOptions"
-                          [fileEncodingOptions]="encodingOptions"
-                          [fileHandlerOptions]="handlerOptions"
-                          [collectionData]="collectionData"
-                          [collectionDataUpdated]="collectionDataUpdated"
-                          (handleFileInputs)="handleFileInputs($event)"></uploader>
+                <uploader [allowedTypes]="allowedTypes" [fileTypeOptions]="typeOptions"
+                  [fileEncodingOptions]="encodingOptions" [fileHandlerOptions]="handlerOptions"
+                  [collectionData]="collectionData" [collectionDataUpdated]="collectionDataUpdated"
+                  (handleFileInputs)="handleFileInputs($event)"></uploader>
                 <button type="submit" class="btn btn-primary right">
-                        {{'Collections.AddCollection' | translate}}
+                  {{'Collections.AddCollection' | translate}}
                 </button>
               </div>
             </div>
