@@ -1,80 +1,90 @@
-<div ui-layout="{dividerSize:'0'}" class="divider-wrapper" >
-    <app-navbar></app-navbar>
-	<!--div ui-layout-container ng-include="'templates/navbar.html'" size="50px" min-size="50px" max-size="50px" ></div-->
-	<div class="ui-layout-container">
-        <div ui-layout="{flow : 'column'}" class="ui-layout-container">
-          	<div class="ui-layout-container" size="400px" min-size="280px" max-size="520px" class="side-bar-wrapper">
-          		<div class="sidebar-header flow-effect-top">
-                	<div class="btn-group btn-group-justified">
-                    	<label class="btn btn-default" btn-radio="'myCollections'">My Collections</label>      
-                	</div>
-            	</div>
-            	<div class="sidebar-main-content">
-                	<ul>
-                 		 <li class="cursor" *ngFor="let collection of dataForTheTree;let index=index" (click)="showSelectedCollection(collection, index)"  [ngClass]="{selectedCollection: index==selectedCollectionIndex}">
-                 		 	<img src="clarin-angular/src/images/folder-closed.png"/> {{collection.name}} <span class="right">
-                 		 		<span *ngIf="collection.confirmed==1 && collection.is_owner" class="label label-info">Shared by me</span>
-                 		 		<span *ngIf="collection.confirmed==1 && !collection.is_owner" class="label label-info" title="The actions that can be performed on this collection are limited because it does not belong to you">Shared with me</span> ({{collection.document_count}} Documents)</span>
-                  		</li>
-            		</ul>
-            	</div>
-          	</div>
-          	<div class="main-content-wrapper ui-layout-container">
-	      		<div class="main-content-header">
-                	<div *ngIf="showStaticHeader==true">
-				Manage collections
-				<div class="btn-toolbar right">
-					<button type="button" class="btn btn-xs btn-primary" (click)="importDocuments()"><i class="fa fa-upload" aria-hidden="true"></i> Import</button>
-				</div>
-			</div>
-
-            <!--download="{{selectedCollection.name}}_export.json"-->
-            		<div *ngIf="showStaticHeader!=true">
-						<div class="left">Collection: <i>{{selectedCollection.name}}</i></div>
-						<div class="btn-toolbar right" *ngIf="btnShow">
-                    		<button type="button" class="btn btn-xs btn-success" (click)="addDocuments()" *ngIf="selectedCollection.is_owner"><i class="fa fa-plus"></i> Add</button>
-                    		<button type="button" class="btn btn-xs btn-primary" (click)="shareCollection()" *ngIf="selectedCollection.is_owner"><i class="fa fa-user-plus"></i> Share</button>
-				<a [href]="'./api/collections/'+selectedCollection.id+'/export'" target="_blank" class="btn btn-xs btn-primary"><i class="fa fa-download"></i> Export</a>
-                    		<button type="button" class="btn btn-xs btn-primary" (click)="renameCollection()" *ngIf="selectedCollection.is_owner"><i class="fa fa-pencil-square-o"></i> Rename</button>
-                    		<button type="button" class="btn btn-xs btn-danger" (click)="deleteCollection(selectedCollection.id)" *ngIf="selectedCollection.is_owner"><i class="fa fa-trash-o fa-lg"></i> Delete Collection</button>
-                 		</div>
-                  		<div class="right" *ngIf="!btnShow">
-                    		<button type="button" class="btn btn-xs btn-danger" (click)="deleteDocuments()" ><i class="fa fa-trash-o fa-lg"></i> Delete Document(s)</button>
-                  		</div>
-						<div style="clear: both"></div>
-            		</div>
-		    	</div>
-           		<div class="main-content">
-					<div class="text-center no-available-documents" *ngIf="collectionDocuments.length==0">
-						<i class="fa fa-tasks" aria-hidden="true"></i>
-						&#09;Please select collection from the list on the left...
-					</div>
-                	<table st-table="collectionDocuments" class="table" *ngIf="collectionDocuments.length>0">
-						<thead>
-							<tr>
-								<th>Id</th>
-								<th>Name</th>
-								<th>Collection Id</th>
-								<th>Encoding</th>
-								<th>Owner</th>
-								<th>Updated at</th>
-								<th>Updated by</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr st-select-row="row" st-select-mode="multiple" *ngFor="let row of collectionDocuments" (click)="documentClick()">
-								<td>{{row.id}}</td>
-								<td>{{row.name}}</td>
-								<td>{{row.collection_id}}</td>
-								<td>{{row.encoding}}</td>
-								<td>{{row.owner_email}}</td>
-								<td>{{row.updated_at}}</td>
-								<td>{{row.updated_by}}</td>
-							</tr>
-						</tbody>
-					</table>
-           		</div>
-          	</div>
+<page-header></page-header>
+<div class="manage-collectiond-wrapper">
+  <as-split direction="horizontal">
+    <as-split-area [size]="30" [minSize]="10" [maxSize]="60" class="side-bar-wrapper">
+      <mat-card>
+        <mat-card-header class="sidebar-header">
+          <mat-card-title>{{'Collections.MyCollections'|translate}} ({{dataForTheTree.length}})</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="sidebar-main-content">
+          <ul>
+            <li class="cursor" *ngFor="let collection of dataForTheTree;let index=index"
+              (click)="showSelectedCollection(collection, index)"
+              [ngClass]="{selectedCollection: index==selectedCollectionIndex}">
+              <img src="assets/images/folder-closed.png" /> {{collection.name}} <span class="right">
+                <span *ngIf="collection.confirmed==1 && collection.is_owner"
+                  class="label label-info">{{'Collections.SharedByMe'|translate}}</span>
+                <span *ngIf="collection.confirmed==1 && !collection.is_owner" class="label label-info"
+                  title="The actions that can be performed on this collection are limited because it does not belong to you">{{'Collections.SharedWithMe'|translate}}</span>
+                ({{collection.document_count}} {{'Collections.Documents'|translate}})
+              </span>
+            </li>
+          </ul>
+        </mat-card-content>
+      </mat-card>
+    </as-split-area>
+    <as-split-area [size]="70" [minSize]="40" [maxSize]="90" class="main-content-wrapper">
+      <mat-card>
+        <mat-card-header *ngIf="showStaticHeader==true">
+          <mat-card-actions><span>Manage collections</span>
+            <span class="example-spacer"></span>
+            <button mat-stroked-button color="primary" (click)="importDocuments()"><i class="fa fa-upload"
+                aria-hidden="true"></i> Import</button>
+          </mat-card-actions>
+        </mat-card-header>
+        <!--download="{{selectedCollection.name}}_export.json"-->
+        <div *ngIf="showStaticHeader!=true">
+          <mat-card-title>Collection: <i>{{selectedCollection.name}}</i></mat-card-title>
+          <mat-card-actions align="end" *ngIf="btnShow">
+            <button type="button" class="btn btn-xs btn-success" (click)="addDocuments()"
+              *ngIf="selectedCollection.is_owner"><i class="fa fa-plus"></i> Add</button>
+            <button type="button" class="btn btn-xs btn-primary" (click)="shareCollection()"
+              *ngIf="selectedCollection.is_owner"><i class="fa fa-user-plus"></i> Share</button>
+            <a [href]="'./api/collections/'+selectedCollection.id+'/export'" target="_blank"
+              class="btn btn-xs btn-primary"><i class="fa fa-download"></i> Export</a>
+            <button type="button" class="btn btn-xs btn-primary" (click)="renameCollection()"
+              *ngIf="selectedCollection.is_owner"><i class="fa fa-pencil-square-o"></i>
+              Rename</button>
+            <button type="button" class="btn btn-xs btn-danger" (click)="deleteCollection(selectedCollection.id)"
+              *ngIf="selectedCollection.is_owner"><i class="fa fa-trash-o fa-lg"></i> Delete Collection</button>
+          </mat-card-actions>
+          <mat-card-actions align="end" *ngIf="!btnShow">
+            <button type="button" class="btn btn-xs btn-danger" (click)="deleteDocuments()"><i
+                class="fa fa-trash-o fa-lg"></i> Delete Document(s)</button>
+          </mat-card-actions>
         </div>
-  	</div>
+        <mat-card-content class="main-content">
+          <div class="text-center no-available-documents" *ngIf="collectionDocuments.length==0">
+            <i class="fa fa-tasks" aria-hidden="true"></i>
+            &#09;Please select a collection from the list on the left...
+          </div>
+          <table st-table="collectionDocuments" class="table" *ngIf="collectionDocuments.length>0">
+            <thead>
+              <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Collection Id</th>
+                <th>Encoding</th>
+                <th>Owner</th>
+                <th>Updated at</th>
+                <th>Updated by</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr st-select-row="row" st-select-mode="multiple" *ngFor="let row of collectionDocuments"
+                (click)="documentClick()">
+                <td>{{row.id}}</td>
+                <td>{{row.name}}</td>
+                <td>{{row.collection_id}}</td>
+                <td>{{row.encoding}}</td>
+                <td>{{row.owner_email}}</td>
+                <td>{{row.updated_at}}</td>
+                <td>{{row.updated_by}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </mat-card-content>
+      </mat-card>
+    </as-split-area>
+  </as-split>
 </div>
